--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 body{
     background-color: hsl(212, 45%, 89%);
+    height: 100vh;
     text-align: center;
     font-family: 'Outfit', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 section{
@@ -10,9 +14,7 @@ section{
     background-color: rgb(255, 255, 255);
     height: 507px;
     width: 350px;
-    border-radius: 1.5rem ;
-    margin: auto;
-    margin-top: 130px;
+    border-radius: 1.2rem ;
     padding-top: 1rem;
 }
 
@@ -21,18 +23,20 @@ section{
 
 #imgqr{
     width: 320px;
-    border-radius: 1.5rem ;
+    border-radius: 0.7rem ;
 }
 
 .text{
-    font-size: 20px;
+    color: hsl(218, 44%, 22%);
+    font-size: 24px;
     font-weight: 700;
-    padding: 1rem 3rem 0.5rem 3rem;
+    padding: 1rem 1.9rem 0.5rem 1.9rem;
 }
 
 .text2{
     color: hsl(220, 15%, 55%);
     font-size: 15px;
-    padding: 0.5rem 3rem 1rem 3rem;
+    padding: 0.5rem 2.7rem 1rem 2.7rem;
     font-weight: 400;
 }
+
